[tool.poetry]
name = "audiness"
version = "0.5.0"
description = "CLI tool to interact with Tenable's Nessus"
authors = ["Fabian Affolter <fabian-affolter@audius.de>"]
readme = "README.md"
license = "MIT"
keywords = ["vulnerabilites", "nessus"]
homepage = "https://github.com/audius/audiness"
repository = "https://github.com/audius/audiness"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.21"}
pytenable = "^1.6"
validators = "^0.35"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[poetry.group.dev.dependencies]
black = "^25.12"
isort = "^5.13"

[tool.poetry.scripts]
audiness = "audiness.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
